tests/typec-test/test_out/spec-call.txt
error: duplicate definition
 --> spec-call\root.ctl:5:4
  |
5 | fn main -> u32 => pass(0)
  |    ---- info: this name
  |
 ::: spec-call\root.ctl:4:4
  |
4 | fn main -> uint => pass(0)
  |    ---- info: matches this already existing item
  |

error: function or module not found
 --> spec-call\root.ctl:4:20
  |
4 | fn main -> uint => pass(0)
  |                    ^^^^ this does not exist
  |
  = info: queried 'pass'

error: function or module not found
 --> spec-call\root.ctl:5:19
  |
5 | fn main -> u32 => pass(0)
  |                   ^^^^ this does not exist
  |
  = info: queried 'pass'

info: tir repr of functions:
 

